# upiano

./: .gitattributes  LICENSE  Makefile  README.md  note_render.py  plan.txt  pyproject.toml  textual_ui.py  ui.py  upiano.py
upiano/: app.py  keyboard_ui.py  legacy.py  midi.py  note_render.py  piano.py  style.css  textual_ui.py  upiano.py  widgets.py
upiano/soundfonts/: GeneralUser_GS_v1.471.sf2
